add a status color

--- a/templates/form-activity.html
+++ b/templates/form-activity.html
@@ -83,7 +83,7 @@
                 <breakdown-list list="activity.list"></breakdown-list>
 
                 <li class="item item-divider">
-                    More Instructions?
+                    Instructions?
                 </li>
                 <label class="item item-input item-stacked-label">
                     <!--<input type="text" placeholder="john@suhr.com">-->
