--- a/templates/activity.html
+++ b/templates/activity.html
@@ -37,14 +37,13 @@
 
     <!--<div class="card completionDetails" ng-if="activity.status === 1">-->
     <div class="card completionDetails">
-        <div class="item item-divider">
+        <div class="item item-divider item-{{statusColor(activity.status)}}">
             <span ng-show="activity.status === 0">Open</span>
-            <span ng-show="activity.status === 1" class="balanced">Completed</span>
-            <span ng-show="activity.status === 2" class="assertive">Urgent</span>
-            <span ng-show="activity.status === 3" class="assertive">Important</span>
-            <span ng-show="activity.status === 4" class="assertive">Urgent & Important</span>
-
-        </div>
+            <span ng-show="activity.status === 1">Completed</span>
+            <span ng-show="activity.status === 2">Urgent</span>
+            <span ng-show="activity.status === 3">Important</span>
+            <span ng-show="activity.status === 4">Urgent & Important</span>
+       </div>
         <div class="item" ng-if="activity.status === 1">
             <div class="row">
                 <div class="col col-33">
