--- a/templates/breakdown-list.html
+++ b/templates/breakdown-list.html
@@ -1,5 +1,5 @@
 <li class="item item-divider">
-    Need a list?
+    Steps?
 </li>
 
 <div class="item item-button-right">
@@ -10,14 +10,14 @@
 </div>
 
 <div ng-hide="editMode" ng-repeat="item in list" class="item item-button-right">
-    <span ng-click="edit()">{{item}}</span>
+    <span ng-click="edit()">{{item.title}}</span>
     <button type="button" ng-click="deleteListItem($index)" class="button button-light">
         <i class="icon ion-ios7-minus-empty"></i>
     </button>
 </div>
 
 <div ng-show="editMode" ng-repeat="item in list" class="item item-button-right">
-    <input ng-model="item" type="text">
+    <input ng-model="item.title" type="text">
     <button type="button" ng-click="editListItem($index, item)" class="addList button button-light">
         <i class="icon ion-ios7-plus-empty"></i>
     </button>
