--- a/templates/activity.html
+++ b/templates/activity.html
@@ -90,6 +90,20 @@
             </label>
         </div>
     </div>
+    
+    <div class="card activityInstructions" ng-show="activity.instructions" ng-class="{greyOut: activity.status===1}">
+        <div class="item item-divider">
+            Instructions
+        </div>
+
+        <div class="item item-text-wrap" ng-hide="!activity.instructions">
+
+            {{ activity.instructions || "none" }}
+
+        </div>
+
+    </div>
+
 
     <div class="card activityDetails" ng-class="{greyOut: activity.status===1}">
 
@@ -113,17 +127,6 @@
                 <div class="col col-33">Added on:</div>
                 <div class="col">
                     {{activity.date | date}}
-                </div>
-            </div>
-        </div>
-
-        <div class="item" ng-hide="!activity.instructions">
-            <div class="row">
-                <div class="col col-100"><b>Instructions:</b></div>
-            </div>
-            <div class="row">
-                <div class="col col-100">
-                    {{ activity.instructions || "none" }}
                 </div>
             </div>
         </div>
